# daybreak

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  demo.cast  demo.sh
.github/workflows/: ci-full.yml  ci-quick.yml  ci.yml
DOCS/: daybreak-build-plan.md  daybreak-claude-project-prompt.md  daybreak-project-brief.md  daybreak-technical-reference.md  hackathon-next-steps.md
automaton/: SOUL.md  automaton.json  heartbeat.yml
backend/: .env.example  package-lock.json  package.json  vitest.config.ts
backend/scripts/: validate-scan.ts
backend/src/: index.ts  mcp-server.ts  test-accuracy.ts  test-scoring.ts  types.ts
backend/src/__tests__/: auth.test.ts  bot-key.test.ts  cache.test.ts  data-validation.test.ts  death-classifier.test.ts  deployer.test.ts  dexscreener.test.ts  edge-cases.test.ts  health.test.ts  reputation.test.ts  sanitize.test.ts  setup.ts  validate.test.ts  wallet.test.ts
backend/src/middleware/: auth.ts
backend/src/routes/: auth.ts  deployer.ts  health.ts  reportcard.ts  wallet.ts
backend/templates/: history-card.html  thesis-card.html  twitter-card.html
examples/aave/: deployment.json  ntt-commands.sh  report.md
examples/ondo/: deployment.json  ntt-commands.sh  report.md
skills/daybreak-scan/: README.md  SKILL.md
src/: cli.rs  main.rs
src/analyzers/: bridges.rs  compatibility.rs  discovery.rs  holders.rs  mod.rs  solana.rs  volume.rs
src/commands/: check.rs  compare.rs  deploy.rs  list.rs  migrate.rs  mod.rs  report.rs  scan.rs  status.rs
src/output/: json.rs  markdown.rs  mod.rs  terminal.rs
src/report/: comparison.rs  cost_estimate.rs  migration_plan.rs  mod.rs  ntt_config.rs
src/scoring/: mod.rs  risk.rs
src/solana/: deployer.rs  mod.rs
src/types/: analysis.rs  compatibility.rs  migration.rs  mod.rs  token.rs
web/: index.html  middleware.js  next.config.mjs  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
web/app/: layout.jsx  page.jsx  robots.js  sitemap.js
web/components/: ComingSoon.jsx  Footer.jsx  LandingContent.jsx  Nav.jsx  ProfileClient.jsx  ScannerClient.jsx  SunriseShader.jsx  WalletProvider.jsx
web/hooks/: useAuth.js
web/lib/: api.js  features.js
web/public/: robots.txt  sitemap.xml
web/src/: api.js  index.jsx  styles.css
web/styles/: globals.css
(+42 files in other folders)
