[package]
name = "daybreak"
version = "0.1.0"
edition = "2021"
description = "CLI tool for analyzing EVM tokens and generating Solana migration reports via Wormhole NTT"
authors = ["Jpatching"]
license = "MIT"
keywords = ["solana", "ethereum", "migration", "ntt", "wormhole"]
categories = ["command-line-utilities"]
repository = "https://github.com/Jpatching/daybreak"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
anyhow = "1"
solana-sdk = "~1.18"
solana-client = "~1.18"
spl-token = "~4.0"
mpl-token-metadata = "4.1"
